--- a/packages/form/src/fieldset.pcss
+++ b/packages/form/src/fieldset.pcss
@@ -10,7 +10,11 @@
     padding: var(--sds-space-padding-tiny);
   }
 
+  &__help-text {
+    color: var(--help-text-color);
+  }
+
   &--error {
-    --fieldset-color: var(--sds-color-text-critical);
+    --help-text-color: var(--sds-color-text-primary);
   }
 }
