--- a/packages/form/src/help-text.pcss
+++ b/packages/form/src/help-text.pcss
@@ -8,6 +8,6 @@
   padding: var(--sds-space-padding-tiny);
 
   &--error {
-    --help-text-color: var(--sds-color-text-critical);
+    --help-text-color: var(--sds-color-text-primary);
   }
 }
