--- a/packages/form/src/label.pcss
+++ b/packages/form/src/label.pcss
@@ -9,8 +9,4 @@
     line-height: var(--sds-typography-body-lineheight-small);
     padding: var(--sds-space-padding-tiny);
   }
-
-  &--error {
-    --label-color: var(--sds-color-text-critical);
-  }
 }
